--- a/Wiper/Base.lproj/Main.storyboard
+++ b/Wiper/Base.lproj/Main.storyboard
@@ -1,26 +1,144 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gjz-WZ-Qb7">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--ReferenceViewController-->
+        <scene sceneID="Qyn-qD-l1g">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController title="ReferenceViewController" id="i34-do-hkj" customClass="ReferenceViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="aOS-iV-l3Y"/>
+                        <viewControllerLayoutGuide type="bottom" id="dgb-Tp-jsD"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="fVs-p5-1Di">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yLL-4A-QCS">
+                                <rect key="frame" x="20" y="40" width="560" height="511"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="refCellIdentifier" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="refCellIdentifier" rowHeight="100" id="Hui-IL-LBD" customClass="ReferenceTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="560" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hui-IL-LBD" id="ziN-Ji-0MT">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="99"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9JK-UG-Vpf">
+                                                    <rect key="frame" x="8" y="20" width="60" height="60"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" red="0.47660902142524719" green="0.37373736500740051" blue="0.28653344511985779" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="pAd-Ip-EqG"/>
+                                                        <constraint firstAttribute="height" constant="60" id="uvu-dC-MGb"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Laundry Reference " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="PGx-hb-xoT">
+                                                    <rect key="frame" x="78" y="20" width="464" height="60"/>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="htM-zg-wgm"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="PGx-hb-xoT" firstAttribute="leading" secondItem="9JK-UG-Vpf" secondAttribute="trailing" constant="10" id="6b0-NR-txl"/>
+                                                <constraint firstItem="9JK-UG-Vpf" firstAttribute="leading" secondItem="ziN-Ji-0MT" secondAttribute="leadingMargin" id="ESf-xi-R5f"/>
+                                                <constraint firstItem="PGx-hb-xoT" firstAttribute="centerY" secondItem="ziN-Ji-0MT" secondAttribute="centerY" id="NOG-4m-ecw"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="PGx-hb-xoT" secondAttribute="trailing" constant="10" id="acc-xf-f7P"/>
+                                                <constraint firstItem="9JK-UG-Vpf" firstAttribute="centerY" secondItem="ziN-Ji-0MT" secondAttribute="centerY" id="agP-Hd-KYy"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="i34-do-hkj" id="qGW-Wr-bUu"/>
+                                    <outlet property="delegate" destination="i34-do-hkj" id="IY6-UO-1gQ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yLL-4A-QCS" firstAttribute="top" secondItem="aOS-iV-l3Y" secondAttribute="bottom" constant="20" id="Fa7-T0-aL7"/>
+                            <constraint firstItem="yLL-4A-QCS" firstAttribute="leading" secondItem="fVs-p5-1Di" secondAttribute="leadingMargin" id="Uw0-a4-Tpf"/>
+                            <constraint firstItem="yLL-4A-QCS" firstAttribute="trailing" secondItem="fVs-p5-1Di" secondAttribute="trailingMargin" id="bit-qQ-z8F"/>
+                            <constraint firstItem="dgb-Tp-jsD" firstAttribute="top" secondItem="yLL-4A-QCS" secondAttribute="bottom" id="eQA-QJ-rew"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="List" image="listIcon" selectedImage="listIconSel" id="nhn-67-UGq"/>
+                    <connections>
+                        <outlet property="referenceTableView" destination="yLL-4A-QCS" id="XlL-p2-M1I"/>
+                        <outlet property="searchDisplayController" destination="4cQ-9g-S2s" id="cX0-jk-nJF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7uU-NU-Iha" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="4cQ-9g-S2s">
+                    <connections>
+                        <outlet property="delegate" destination="i34-do-hkj" id="OaO-gd-pDL"/>
+                        <outlet property="searchContentsController" destination="i34-do-hkj" id="x7I-L1-7di"/>
+                        <outlet property="searchResultsDataSource" destination="i34-do-hkj" id="J7D-9x-MAm"/>
+                        <outlet property="searchResultsDelegate" destination="i34-do-hkj" id="seN-dZ-D6l"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1028" y="126"/>
+        </scene>
+        <!--ReferenceViewController-->
+        <scene sceneID="GMi-hp-NKP">
+            <objects>
+                <viewController title="ReferenceViewController" id="o1h-io-gx8" customClass="SearchViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Z6u-IB-arm"/>
+                        <viewControllerLayoutGuide type="bottom" id="KzB-8s-Dyg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nj6-BY-OBQ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.29085952043533325" green="0.20994566380977631" blue="0.14615128934383392" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Search" image="searchIcon" selectedImage="searchIconSel" id="nCU-Nc-K96"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7iW-8T-vzO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1028" y="841"/>
+        </scene>
+        <!--MenuTabBarController-->
+        <scene sceneID="AKt-SO-zcL">
+            <objects>
+                <tabBarController title="MenuTabBarController" id="Gjz-WZ-Qb7" customClass="MenuTabViewController" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="EUn-bl-eVC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="i34-do-hkj" kind="relationship" relationship="viewControllers" id="Nd7-5e-Awh"/>
+                        <segue destination="o1h-io-gx8" kind="relationship" relationship="viewControllers" id="x2z-iA-hlw"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Erb-sJ-Wbr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="292" y="520"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="listIcon" width="22" height="20"/>
+        <image name="listIconSel" width="22" height="20"/>
+        <image name="searchIcon" width="22" height="22"/>
+        <image name="searchIconSel" width="22" height="22"/>
+    </resources>
 </document>
