--- a/Wiper/Base.lproj/Main.storyboard
+++ b/Wiper/Base.lproj/Main.storyboard
@@ -234,19 +234,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" indicatorStyle="white" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="TKE-j9-0wn">
-                                <rect key="frame" x="20" y="-5" width="560" height="596"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="TKE-j9-0wn">
+                                <rect key="frame" x="0.0" y="64" width="600" height="527"/>
                                 <animations/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="onk-5C-Xs4">
                                     <size key="itemSize" width="60" height="60"/>
                                     <size key="headerReferenceSize" width="50" height="80"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="collectionCell" reuseIdentifier="collectionCell" id="e5V-x1-oCh" customClass="ImageCollectionViewCell">
-                                        <rect key="frame" x="0.0" y="144" width="60" height="60"/>
+                                        <rect key="frame" x="10" y="144" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
@@ -273,11 +273,11 @@
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeaderView" id="3AZ-Vi-rx4" customClass="HeaderCollectionReusableView">
-                                    <rect key="frame" x="0.0" y="64" width="560" height="80"/>
+                                    <rect key="frame" x="0.0" y="64" width="600" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="HeaderView" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="UX8-xN-5na">
-                                            <rect key="frame" x="0.0" y="18" width="560" height="44"/>
+                                            <rect key="frame" x="0.0" y="18" width="600" height="44"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="32"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -302,13 +302,21 @@
                             </collectionView>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.90823972225189209" green="0.92638683319091797" blue="0.9317171573638916" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="TKE-j9-0wn" firstAttribute="leading" secondItem="Nj6-BY-OBQ" secondAttribute="leadingMargin" id="0nt-OD-jcd"/>
-                            <constraint firstItem="TKE-j9-0wn" firstAttribute="top" secondItem="Z6u-IB-arm" secondAttribute="bottom" constant="-69" id="LWz-Qf-Xzk"/>
+                            <constraint firstItem="TKE-j9-0wn" firstAttribute="top" secondItem="Z6u-IB-arm" secondAttribute="bottom" id="LWz-Qf-Xzk"/>
                             <constraint firstItem="TKE-j9-0wn" firstAttribute="trailing" secondItem="Nj6-BY-OBQ" secondAttribute="trailingMargin" id="MLv-WZ-ai1"/>
+                            <constraint firstItem="TKE-j9-0wn" firstAttribute="leading" secondItem="Nj6-BY-OBQ" secondAttribute="leading" id="WB4-eb-MtR"/>
+                            <constraint firstAttribute="trailing" secondItem="TKE-j9-0wn" secondAttribute="trailing" id="WYv-GX-AvP"/>
                             <constraint firstItem="KzB-8s-Dyg" firstAttribute="top" secondItem="TKE-j9-0wn" secondAttribute="bottom" constant="-40" id="jJY-sG-t1u"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0nt-OD-jcd"/>
+                                <exclude reference="MLv-WZ-ai1"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="KB1-Wh-6q6">
                         <barButtonItem key="rightBarButtonItem" title="Ok" id="8Jj-66-rpT">
@@ -336,20 +344,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions" textAlignment="center" lineBreakMode="clip" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HzO-j0-XvK">
-                                <rect key="frame" x="30" y="20" width="540" height="100"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="0bi-df-O3e"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="100"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="180" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="fWh-xB-7As">
-                                <rect key="frame" x="0.0" y="120" width="600" height="480"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="instructionCell" id="cv2-XB-tTn" customClass="InstructionCell">
                                         <rect key="frame" x="0.0" y="1" width="600" height="180"/>
@@ -373,8 +372,8 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8n0-V7-QAj">
-                                                    <rect key="frame" x="0.0" y="50" width="600" height="349"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8n0-V7-QAj">
+                                                    <rect key="frame" x="0.0" y="50" width="600" height="130"/>
                                                     <animations/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -409,15 +408,12 @@
                             </tableView>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="HzO-j0-XvK" secondAttribute="trailing" constant="10" id="32z-UN-d3R"/>
-                            <constraint firstItem="fWh-xB-7As" firstAttribute="top" secondItem="HzO-j0-XvK" secondAttribute="bottom" id="9FY-Iu-Sc4"/>
                             <constraint firstItem="fWh-xB-7As" firstAttribute="leading" secondItem="l49-ev-1Om" secondAttribute="leading" id="Ggn-iT-C8r"/>
                             <constraint firstAttribute="trailing" secondItem="fWh-xB-7As" secondAttribute="trailing" id="UnR-zm-p7L"/>
-                            <constraint firstItem="HzO-j0-XvK" firstAttribute="leading" secondItem="l49-ev-1Om" secondAttribute="leadingMargin" constant="10" id="gXU-oa-znS"/>
+                            <constraint firstItem="fWh-xB-7As" firstAttribute="top" secondItem="8ri-kx-4F6" secondAttribute="bottom" id="YBU-Gv-iIN"/>
                             <constraint firstItem="IoC-Vt-EMf" firstAttribute="top" secondItem="fWh-xB-7As" secondAttribute="bottom" id="jxm-2e-hxL"/>
-                            <constraint firstItem="HzO-j0-XvK" firstAttribute="top" secondItem="8ri-kx-4F6" secondAttribute="bottom" id="mb6-01-XpQ"/>
                         </constraints>
                     </view>
                 </viewController>
